# Jacobi

./: 10x10.csv  3x3.csv  5x5.csv  README.md  pyproject.toml  requirements.txt  tox.ini
jacobi/: __init__.py  jacobi.py
tests/: test_calc.py
