[tool.poetry]
name = "jacobi"
version = "0.1.0"
description = ""
authors = ["Strelchenko Aleksandr <telikinez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
numba = "^0.59.0"
pytest = "^8.0.2"
tox = "^4.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
